# shopipy-utils

./: LICENSE  README.md  mkdocs.yaml  pyproject.toml
.github/workflows/: sku_indexing.yaml  test.yaml  update_ratings.yaml
.github/workflows/.ipynb_checkpoints/: sku_indexing-checkpoint.yaml
notebooks/: sku.ipynb
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
scripts/: add_skus.py  update_ratings.py  update_skus.py
shopipy_utils/: constants.py  products.py  utils.py
tests/: test_products.py
